--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trustyfix</title>
+
+
+    
+    <!-- ✅ Google AdSense site verification script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3562747525219302"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
